Test_files/invalidTestCases/fail_mod.avm
push int32(8)
mod
exit